--- a/assignments/assignment_04/index.html
+++ b/assignments/assignment_04/index.html
@@ -49,7 +49,7 @@
         <li>
           In the early iterations of the project, the confetti was filling the
           screen and covering the message, so I started to think about creating
-          start/sop functionality, as I used in Assignment 1, to stop the confetti when
+          start/stop functionality, as I used in Assignment 1, to stop the confetti when
           it reached a certain point.
         </li>
         <li>
